chore: IDE cleanups - List.copyOf, final classes, drop unused Ui.setupBackToolbar